# unicamp_planner

./: .gitignore  Cargo.toml
src/: cache.rs  cli.rs  main.rs  scraping.rs  solving.rs  unicamp.rs
