[package]
name = "unicamp_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
select = "*"
scraper = "*"
prettytable-rs = "*"
clap = {version = "*", features = ["derive"]}
time = "0.3.30"
serde = {version = "*", features = ["derive"]}
serde_yaml = "0.9.25"
